# novitas-sdks

./: .gitignore  README.md  composer.json
novitas_sdk/: README.md  pyproject.toml
novitas_sdk/logs-exporter-sdk/: README.md
novitas_sdk/teraops_logging/: config.py  exporter.py
sdk-testing-app/: .env.example  otel_config.py  requirements.txt  server.py
teraops-logging-sdk/: README.md  SDK_SERVICE_LABEL_GUIDE.md  pyproject.toml
teraops-logging-sdk-php/: composer.json
teraops-logging-sdk-php/src/: TeraOpsConfig.php  TeraOpsLogExporter.php
teraops-logging-sdk/teraops_logging/: cli.py  exporter.py
teraops_logging/: __init__.py
