[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teraops-sdk"
version = "0.1.0"
description = "TeraOps SDK — OpenTelemetry Log Exporter for TeraOps observability platform"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "TeraOps", email = "support@teraops.ai"},
]

dependencies = [
    "requests>=2.28.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.scripts]
teraops = "teraops_logging.cli:main"

[project.optional-dependencies]
cloudscraper = ["cloudscraper>=1.2.0"]

[project.urls]
Homepage = "https://teraops.ai"
Documentation = "https://docs.teraops.ai"

[tool.setuptools.packages.find]
include = ["teraops_logging*"]
